fixing bug of not showing footer image

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -18,7 +18,7 @@ li {
 }
 
 .footer {
-  background-image:url("./images/grocery_footer1.png");
+  background-image:url("../images/grocery_footer1.png");
 
 }
 
